update attachment URL location